--- a/GeoProject/index.html
+++ b/GeoProject/index.html
@@ -30,12 +30,12 @@
             <p>Mini-project #1: Geo</p>
 
             <h1>Visualization 1</h1>
-            <p>How do the countries compare in terms of how much they receive and donate from other countries? 
+            <p>How do the countries compare in terms of how much they receive and donate from other countries?\n 
                Are there countries that donate much more than they receive or receive much more than they donate?</p>
             <div id="vis1"></div>
             
             <h1>Visualization 2</h1>
-            <p>Do the countries that mostly receive or mostly donate tend to cluster around specific geographical areas of the world? 
+            <p>Do the countries that mostly receive or mostly donate tend to cluster around specific geographical areas of the world?\n 
                 Are there neighboring countries that have radically different patterns in terms of how much they receive 
                 vs. how much they donate?</p>
             <div id="vis2"></div>
