--- a/GeoProject/index.html
+++ b/GeoProject/index.html
@@ -14,6 +14,7 @@
         <!-- D3 library goes first --> 
         <script src="d3/d3.js" defer></script>
         <script src="d3/d3-array.js" defer></script>
+        <script src="d3/d3-color-legend.js" defer></script>
         
         <!-- Then our visualization code --> 
         <script src="visualizations/vis1.js" defer></script>
