--- a/TemporalProject/index.html
+++ b/TemporalProject/index.html
@@ -28,14 +28,21 @@
             <p>Mini-project #2: Temporal</p>
 
             <h1>Visualization 1</h1>
-            <p>Question here</p>
+            <ul><li>How does the amount donated vs. amount received change over time across all countries?</li>
+                <li>Are there countries that mostly send or mostly receive and countries that have a similar amount of donations they receive and send?</li>
+                <li>Are there countries that change their role over time? That is, they used to mostly send donations and turn into mostly receiving donations and vice-versa?</li>
+                <li>Are there countries in which you can find a sudden increase ("peak") or a sudden decrease ("valley")?</li>
+            </ul>
             <div id="visLegend"></div>
             <div id="vis1"></div>
             <br>
 
             <h1>Visualization 2</h1>
-            <p>Question here</p>
-            <div id="vis2"></div>          
+            <ul><li>What are the top 10 purposes of disbursements (in terms of total amount of disbursement) and how does their relative amount compare over time?</li>
+                <li>Are there purposes that tend to be prominent for a period of time and others that become more prominent during other periods? </li>
+            </ul>
+            <div id="vis2"></div>   
+            <br><br><br>       
         </div>
     </body>
 </html>
