Updated the way vis1 is sorted, updated text on webpage

--- a/TemporalProject/index.html
+++ b/TemporalProject/index.html
@@ -38,17 +38,51 @@
             </ul>
             <div id="visLegend1"></div>
             <div id="vis1"></div>
+            <p>As can be seen in the graph above, most countries fall in a 'yellow' range, where the amount of donations they send verses the amount
+                they receive is close to neutral. 
+                <br>The countries that receive more than they send are near the top, whereas the countries that send
+                more are near the bottom. Poland is the country that's received the most donations in one year, whereas India is the country that
+                receives the most total. 
+                <br>Japan is the country that sent the most in a year, and the USA is the country that has sent the most overall.
+                Poland, 
+                <br>Kuwait, Thailand, Korea, India, and Brazil are the countries that noticably receive aid, with Poland and Kuwait having a jump
+                in amount of donations ("peak") they received one year. 
+                <br>The United States, Germany, and Japan are the countries that noticably send aid, and
+                France and the UK are just starting to turn blue towards 2012. The US and Japan have a jump in donations ("peak") sent one year.
+            </p>
             <br>
 
             <h1>Visualization 2</h1>
             <ul><li>What are the top 10 purposes of disbursements (in terms of total amount of disbursement) and how does their relative amount compare over time?</li>
                 <li>Are there purposes that tend to be prominent for a period of time and others that become more prominent during other periods? </li>
             </ul>
+            <p>Note that the 3 following visualizations use the same color key, as given below.</p>
             <div id="visLegend2"></div>
             <div id="vis2"></div>   
+            <p>The first visualization I tried for this problem was a line chart. I kept it because it very clearly shows the purposes that peak and reach
+                much higher values than the others, but the majority of the lines overlap and it makes it very hard to compare the lower-valued purposes
+                due to the clutter. 
+            </p>
             <br>
             <div id="vis3"></div>
+            <p>The second visualization I tried for this problem was a stacked area chart. Due to the nature of the data, and the fact that different purposes
+                are prominent for different periods, and some don't have a value at all for some years, it looks... kind of like something a child would make
+                on ms paint. You can get an idea of how prominent different purposes were in given years, but I personally think it's easier to read the line 
+                chart, just due to how messy this one looks. It's easier to see and compare all the purposes, but there's so many points and dips and so much 
+                going on that the overall graph is kind of overwhelming. 
+            </p>
             <div id="vis4"></div>
+            <p>I still wanted something that would make it easier to compare every value than the line chart, so I kept the same idea of using area and made it
+                a with bars instead. Since using the bars removes the connection between each year, it makes it look a lot cleaner and doesn't feel as overwhelming. 
+                It's also much easier to compare the length of the bars than it is to compare the area between the lines / peaks of the previous chart. 
+                <br>I still think it's the easiest to see which purposes are most prominent for any given year in the line chart, but the stacked bar chart makes
+                it easier to compare all purposes across all years. I honestly don't like the stacked area chart at all for this dataset, but I kept it for comparison
+                with the bar chart. 
+                <br>One thing to note is that, because this is using percentages, the length of the bars doesn't actually tell the value of donations given for each year.
+                The bars can look to be similar sizes across multiple years, but that doesn't actually mean those purposes got the same amount of donations, since the overall
+                amount of donations for that year could be lower and therefore result in a high percentage even though the actual value isn't as high as a different purpose
+                might have in another year. 
+            </p>
             
             <br><br><br>       
         </div>
