Added pdf of visualizations

--- a/NetworksProject/index.html
+++ b/NetworksProject/index.html
@@ -37,7 +37,10 @@
             </ul>
             <div id="vis1"></div>
             <p>
-                Explanation
+                The donors and recipients are sorted by overall net donation values. 
+                <br>The United States, Japan, Germany, and the United Kingdom are the major donors. 
+                <br>India, Thailand, and Brazil are the major receivers. 
+                <br>The single largest donation was from Japan to India. 
             </p>
             <br>
 
@@ -45,7 +48,7 @@
             <p>
                 Consider only the top 5 purposes of donation, and the top 10 recipients and top 20 donors.
             </p>
-            <ul><li>How does the relationship between countries look like in terms of purposes?</li>
+            <ul><li>How does the relationship between countries look in terms of purposes?</li>
                 <li>What composition of purposes do the donations between each pair of countries have?</li>
                 <li>Are there countries that donate to a given country using multiple purposes? Or do counties always donate using one single purpose when donating to another country?</li>
             </ul>
@@ -53,10 +56,14 @@
             <div id="vis2"></div>   
             <br>
             <p>
-                Explanation
-            </p>
-            
-            <br><br><br>       
+                The United States makes a lot of different types of donations to each country. Japan starts off with having
+                varied donation purposes, but then focuses on donations for rail transport and industrial development. 
+                <br>Overall, there are a lot of donations for industrial development. 
+                <br><br> I considered making area relevant for this visualization as well, and showing the net amount of donations
+                through the size of the pie chart, but varying the sizes of the circles made it much harder to see the different
+                colors and compare donation purposes, especially since the circles are already on the smaller side to fit them all 
+                on the screen. 
+            </p>  
         </div>
     </body>
 </html>
